# GoM

./: README.md
hs/: .gitignore  ChangeLog.md  package.yaml  stack.yaml
hs/app/: Main.hs
hs/src/GoM/: Helper.hs  Types.hs
hs/statShow/: Main.hs
rs/: Cargo.toml
rs/src/: lib.rs  main.rs  types.rs
