[package]
name = "gom"
version = "2019.5.4"
authors = ["Magicloud <1886157+Magicloud@users.noreply.github.com>"]
edition = "2018"

[dependencies]
users = "0.9.1"
nix = "0.13.0"
bitflags = "1.0.4"
num-traits = "0.2.6"
notify-send = { git = "https://github.com/magicloud/notify-send" }

[profile.release]
lto = true
panic = 'abort'

[lib]
name = "procfs"
path = "src/lib.rs"

[[bin]]
name = "gom"
path = "src/main.rs"
